* mobile - main/profile/career

--- a/src/index.html
+++ b/src/index.html
@@ -142,7 +142,91 @@
     </section>
     <!-- e profile -->
 
-    <!-- s career 1-->
+    <!-- s career 2021 -->
+    <section class="career">
+        <h2 class="sr-only">career</h2>
+        <div class="inner">
+            <div class="year-info">
+                <div class="heading">more projects</div>
+                <div class="year">2021</div>
+            </div>
+            <div class="work-list">
+                <ul>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">Pablo 미술앱</span>
+                            <span class="year">2020.11 - 2021.01</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">ER Bank</span>
+                            <span class="year">2021.1</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">i-Scream 초등/중등 태블릿 컨텐츠</span>
+                            <span class="year">2020.10 - 2021.2</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">A-cha 민원센터</span>
+                            <span class="year">2021.3</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">Enuma LMS</span>
+                            <span class="year">2021.2 - 2021.5</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <!-- https://www.etsne.com/exzone -->
+                            <span class="title">eTSNE eXzone</span>
+                            <span class="year">2021.5</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">LGU+ 아이들나라 4.0</span>
+                            <span class="year">2020.12 - 2021.7</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">Enuma KitKit School</span>
+                            <span class="year">2021.10</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">A-cha 하이브리드 앱</span>
+                            <span class="year">2019.12 - 진행중</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">Macrogen Web/Mobile</span>
+                            <span class="year">2021.2 - 진행중</span>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <span class="title">LG헬로비전 아이들나라 4.0</span>
+                            <span class="year">2021.7 - 진행중</span>
+                        </a>
+                    </li>
+                </ul>
+                <div class="alert">* 관리자 페이지, 내부 프로젝트, 모바일 어플리케이션, 태플릿 인 앱, TV 인 앱은 링크가 없는 점 양해바랍니다.</div>
+            </div>
+        </div>
+    </section>
+    <!-- e career 2021 -->
+
+    <!-- s career 2019 - 2020-->
     <section class="career">
         <h2 class="sr-only">career</h2>
         <div class="inner">
@@ -206,7 +290,7 @@
                     </li>
                     <li class="item">
                         <a href="#">
-                            <span class="title">홈런 마켓</span>
+                            <span class="title">i-Scream Home Learn 마켓</span>
                             <span class="year">2020.9 - 2020.11</span>
                         </a>
                     </li>
@@ -216,81 +300,10 @@
                             <span class="year">2020.11 - 2020.12</span>
                         </a>
                     </li>
-                </ul>
-                <div class="alert">* 관리자 페이지, 내부 프로젝트, 모바일 어플리케이션, 태플릿 인 앱, TV 인 앱은 링크가 없는 점 양해바랍니다.</div>
-            </div>
-        </div>
-    </section>
-    <!-- e career 1 -->
-
-    <!-- s career 2 -->
-    <section class="career">
-        <h2 class="sr-only">career</h2>
-        <div class="inner">
-            <div class="year-info">
-                <div class="heading">more projects</div>
-                <div class="year">2021</div>
-            </div>
-            <div class="work-list">
-                <ul>
                     <li class="item">
                         <a href="#">
-                            <span class="title">Pablo 미술앱</span>
-                            <span class="year">2020.11 - 2021.01</span>
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href="#">
-                            <span class="title">ER Bank</span>
-                            <span class="year">2021.1</span>
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href="#">
-                            <span class="title">홈런 에코 초등/중등</span>
-                            <span class="year">2020.10 - 2021.2</span>
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href="#">
-                            <span class="title">A-cha 민원센터</span>
-                            <span class="year">2021.3</span>
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href="#">
-                            <span class="title">Enuma LMS</span>
-                            <span class="year">2021.2 - 2021.5</span>
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href="#">
-                            <span class="title">LGU+ 아이들나라 4.0</span>
-                            <span class="year">2020.12 - 2021.7</span>
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href="#">
-                            <span class="title">Enuma KitKit School</span>
-                            <span class="year">2021.10</span>
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href="#">
-                            <span class="title">A-cha 하이브리드 앱</span>
-                            <span class="year">2019.12 - 진행중</span>
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href="#">
-                            <span class="title">Macrogen Web/Mobile</span>
-                            <span class="year">2021.2 - 진행중</span>
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href="#">
-                            <span class="title">LG헬로비전 아이들나라 4.0</span>
-                            <span class="year">2021.7 - 진행중</span>
+                            <span class="title">i-Scream 에듀 관리자 페이지 / 판매 관리자 페이지</span>
+                            <span class="year">2020.10 - 2020.12</span>
                         </a>
                     </li>
                 </ul>
@@ -298,11 +311,13 @@
             </div>
         </div>
     </section>
-    <!-- e career 2 -->
+    <!-- e career 2019 - 2020 -->
 
+    <!-- s ? -->
     <section class="section05">
         <h2 class="sr-only">career</h2>
     </section>
+    <!-- e ? -->
 </div>
 <div class="popup" id="popup">
     <div class="content">
@@ -358,7 +373,7 @@
     let SECTIONS = gsap.utils.toArray("section");
 
     ScrollTrigger.matchMedia({
-        // desktop
+        // pc
         "(min-width: 800px)": function() {
             gsap.to(SECTIONS, {
                 xPercent: -100 * (SECTIONS.length - 1),
