todo!기여도 추가

--- a/src/index.html
+++ b/src/index.html
@@ -146,6 +146,10 @@
                             <div class="text">아이스크림 홈런 전용 태블릿 전용 앱</div>
                             <div class="text"><span class="font-medium">Vue </span>환경 퍼블리싱</div>
                             <div class="text">사용 언어</div>
+                            <div class="text">기여도</div>
+                            <div class="bar-wrap">
+                                <div class="bar" style="width: 50%">50%</div>
+                            </div>
                             <div class="badge-wrap">
                                 <span class="badge html">html</span>
                                 <span class="badge css">scss</span>
@@ -384,7 +388,7 @@
                             </div>
                             <div class="text">동영상</div>
                             <div class="video">
-                                <video autoplay controls>
+                                <video  controls>
                                     <source src="img/career/kitkitschol.mov" type="video/mp4">
                                 </video>
                             </div>
@@ -597,7 +601,7 @@
                             </div>
                             <div class="text">동영상</div>
                             <div class="video">
-                                <video autoplay controls>
+                                <video  controls>
                                     <source src="img/career/myui.mov" type="video/mp4">
                                 </video>
                             </div>
@@ -766,7 +770,7 @@
                             </div>
                             <div class="text">동영상</div>
                             <div class="video">
-                                <video autoplay controls>
+                                <video  controls>
                                     <source src="img/career/smart_vending.mov" type="video/mp4">
                                 </video>
                             </div>
@@ -832,12 +836,12 @@
                             </div>
                             <div class="text">동영상</div>
                             <div class="video">
-                                <video autoplay controls>
+                                <video  controls>
                                     <source src="img/career/gs-shop-admin.mov" type="video/mp4">
                                 </video>
                             </div>
                             <div class="video">
-                                <video autoplay controls>
+                                <video  controls>
                                     <source src="img/career/gs-shop-dashboard.mov" type="video/mp4">
                                 </video>
                             </div>
