--- a/src/index.html
+++ b/src/index.html
@@ -68,11 +68,11 @@
                         </div>
                         <div class="item-list">
                             <ul>
-                                <li><span>name</span><span>Juyeon Lee <em class="font-normal">(이주연)</em></span></li>
-                                <li><span>title</span><span>Web Publisher</span></li>
-                                <li><span>phone</span><span><a href="tel:010-7250-7379">010-7250-7379</a></span></li>
-                                <li><span>email</span><span><a href="mailto:janielee0919@gmail.com">janielee0919@gmail.com</a></span>
-                                </li>
+                                <li><span>name<i class="fas fa-user"></i></span><span>Juyeon Lee <em class="font-normal">(이주연)</em></span></li>
+                                <li><span>title<i class="fas fa-briefcase"></i></span><span>Web Publisher</span></li>
+                                <li><span>phone<i class="fas fa-phone"></i></span><span><a href="tel:010-7250-7379">010-7250-7379</a></span></li>
+                                <li><span>email<i class="fas fa-envelope"></i></span><span><a href="mailto:janielee0919@gmail.com">janielee0919@gmail.com</a></span></li>
+                                <li><span>git<i class="fab fa-github"></i></span><span><a href="https://github.com/janie-0919">https://github.com/janie-0919</a></span></li>
                             </ul>
                         </div>
                     </div>
@@ -994,12 +994,6 @@
         </div>
     </section>
     <!-- e career 2019 - 2020 -->
-
-    <!-- s ? -->
-<!--    <section class="section05">-->
-<!--        <h2 class="sr-only">career</h2>-->
-<!--    </section>-->
-    <!-- e ? -->
 </div>
 </body>
 </html>
