* 기업 후기 수정

--- a/src/index.html
+++ b/src/index.html
@@ -157,7 +157,8 @@
                                 <div class="bar" data-percent="80">80%</div>
                             </div>
                             <div class="text">프로젝트 후기</div>
-                            <div class="desc">모든 단위를 px이 아닌 rem으로 작업했던 프로젝트. 레이아웃이 어렵지 않아 퍼블리싱하기 쉬웠던 편이다.</div>
+                            <div class="desc">모든 단위를 px이 아닌 rem으로 작업했던 프로젝트. 레이아웃이 어렵지 않아 퍼블리싱하기 쉬웠던 프로젝트였다.
+                                하지만 후반에 태블릿 기기의 웹뷰에서만 테스트가 가능했던 지라, 퍼블리싱은 쉬웠지만 웹뷰에서만 발생하는 이슈를 디버깅하는데에 어려움이 있었다.</div>
                             <div class="text">미리보기</div>
                             <div class="img-container">
                                 <a href="img/career/pablo-1.png">
@@ -195,7 +196,7 @@
                                 <div class="bar" data-percent="100">100%</div>
                             </div>
                             <div class="text">프로젝트 후기</div>
-                            <div class="desc">Vue 프로젝트지만 Router 이동이 많지 않은 프로젝트라, 퍼블리싱이 하기엔 편한 편이었다.</div>
+                            <div class="desc">Vue 프로젝트지만 라우터 이동이 많지 않은 프로젝트라, 퍼블리싱이 하기엔 편한 편이었다. 한 페이지에서 컴포넌트 단위로 퍼블리싱하면 되는 프로젝트였다.</div>
                             <div class="text">미리보기</div>
                             <div class="img-container">
                                 <a href="img/career/er-bank-1.png">
@@ -408,15 +409,41 @@
                             <div class="text">프로젝트 후기</div>
                             <div class="desc">
                                 Vue를 이용하여 혼자 개발자 없이 작업한 프로젝트.
-                                디자인 없이 기존 웹페이지의 소스를 분석하는 프로젝트였는데, 워드프레스는 한 엘리먼트에 여러 엘리먼트가 감싸져있고, 적용된 스타일이나 스크립트 등 소스코드를
-                                볼 때 어려움이 있었다.
-                                Vue의 라이프사이클의 이해도를 높일 수 있는 프로젝트였다.
+                                디자인 없이 기존 웹페이지의 소스를 분석하는 프로젝트였는데, 워드프레스는 한 엘리먼트에 여러 엘리먼트들로 감싸져있고, 적용된 스타일이나 스크립트 등 소스코드를
+                                볼 때 어려움이 있었지만, 페이지 수는 그렇게 많지 않던 편이라 프로젝트를 잘 마무리 할 수 있었다. 특히 이 프로젝트에서 Vue의 라이프 사이클의 이해도를 높일 수 있었다.
                             </div>
                             <div class="text">동영상</div>
                             <div class="video">
                                 <video controls>
                                     <source src="img/career/kitkitschol.mov" type="video/mp4">
                                 </video>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <a class="item-header" href="#">
+                            <span class="title">Macrogen PC/Mobile Web</span>
+                            <span class="year">2021.9 - 2021.12</span>
+                        </a>
+                        <div class="item-body">
+                            <div class="text">Macrogen 기존 웹사이트를 리뉴얼하는 프로젝트</div>
+                            <div class="text">링크</div>
+                            <div class="desc"><a href="https://www.macrogen.com/ko/main" target="_blank">https://www.macrogen.com/ko/main</a>
+                            </div>
+                            <div class="text">사용 언어</div>
+                            <div class="badge-wrap">
+                                <span class="badge html">html</span>
+                                <span class="badge css">scss</span>
+                                <span class="badge js">js</span>
+                            </div>
+                            <div class="text">기여도</div>
+                            <div class="bar-wrap">
+                                <div class="bar" data-percent="60">60%</div>
+                            </div>
+                            <div class="text">프로젝트 후기</div>
+                            <div class="desc">처음 디자인 툴로 Figma를 사용 했던 프로젝트로, 새로운 디자인 툴을 경험해 볼 수 있었다.
+                                전반적으로 사이트에 인터랙션이 많았는데 특이 인터랙션 빼고는 전반적으로 퍼블리싱이 어렵지 않았다.
+                                하지만 고객사와 디자인 팀의 끝없는 요구 사항들이 주말/야간에 들어오고 프로젝트 기간도 상당히 촉박했기 때문에 사람을 지치게 만드는 프로젝트였다.
                             </div>
                         </div>
                     </li>
@@ -461,34 +488,6 @@
                                 <a href="img/career/acha-mobile-6.png">
                                     <img src="img/career/acha-mobile-6.png"/>
                                 </a>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="item">
-                        <a class="item-header" href="#">
-                            <span class="title">Macrogen PC/Mobile Web</span>
-                            <span class="year">2021.2 - 진행중</span>
-                        </a>
-                        <div class="item-body">
-                            <div class="text">Macrogen 기존 웹사이트를 리뉴얼하는 프로젝트</div>
-                            <div class="text">링크</div>
-                            <div class="desc"><a href="https://www.macrogen.com/ko/main" target="_blank">https://www.macrogen.com/ko/main</a>
-                            </div>
-                            <div class="text">사용 언어</div>
-                            <div class="badge-wrap">
-                                <span class="badge html">html</span>
-                                <span class="badge css">scss</span>
-                                <span class="badge js">js</span>
-                            </div>
-                            <div class="text">기여도</div>
-                            <div class="bar-wrap">
-                                <div class="bar" data-percent="60">60%</div>
-                            </div>
-                            <div class="text">프로젝트 후기</div>
-                            <div class="desc">디자인 툴로 Figma를 사용 하는 프로젝트로, 새로운 디자인 툴을 경험해 볼 수 있었다.
-                                전반적으로 사이트에 인터랙션이 많았는데 특이 인터랙션 빼고는 전반적으로 퍼블리싱이 어렵지 않았다.
-                                하지만 고객사와 디자인 팀의 끝없는 요구 사항과 촉박한 프로젝트 기간 때문에 힘들었던 프로젝트다.
-                                현재 모바일 페이지 작업중에 있다.
                             </div>
                         </div>
                     </li>
@@ -541,8 +540,8 @@
                             <div class="text">사용 언어</div>
                             <div class="badge-wrap">
                                 <span class="badge html">html</span>
+                                <span class="badge react">React</span>
                                 <span class="badge css">scss</span>
-                                <span class="badge js">js</span>
                             </div>
                             <div class="text">기여도</div>
                             <div class="bar-wrap">
@@ -621,8 +620,8 @@
                             </div>
                             <div class="text">프로젝트 후기</div>
                             <div class="desc">
-                                Cuckoo 프로젝트를 진행하면서 동시에 아이들나라를 담당하고 있던 퍼블리셔가 퇴사를 하게 되어, 투입되었다.
-                                기존 로직이 어떻게 되고, TV 개발 프로젝트가 어떻게 이뤄지고 있는지 파악하는데 시간이 걸리긴 했지만
+                                Cuckoo 프로젝트를 진행하면서 동시에 아이들나라를 담당하고 있던 퍼블리셔가 퇴사를 하게 되어 투입되었던 프로젝트였다.
+                                기존 히스토리 및 TV앱 개발 프로젝트가 어떻게 이뤄지고 있는지 파악하는데 시간이 걸리긴 했지만
                                 개발자 분들의 도움으로 프로젝트를 잘 마무리 할 수 있었다.
                             </div>
                             <div class="text">미리보기</div>
